# pipellm

./: .gitignore  README.md  main.py  pyproject.toml
assets/: compression_plot1.html  compression_plot2.html
notebook/: 01_tokenization.ipynb  02_tinyllm.ipynb  03_advancing_my_llm.ipynb  device.py  plot2.html
notebook/logs/: plot_BPE Compression ratio.html  plot_hello.html  plot_the-verdict.html
notebook/logs/lightning_logs/version_0/: events.out.tfevents.1767957203.archlinux.239428.0  hparams.yaml
